feat: enhance ServicesPool with ServiceCluster management and improve resource handling